syntax = "proto3";
package logs;

message LogEntry {
    string source = 1;
    string level = 2;
    string message = 3;
    int64 timestamp = 4; // âœ… Change Timestamp to int64
}

service LogService {
    rpc StreamLogs (stream LogEntry) returns (Ack);
}

message Ack {
    bool success = 1;
    string message = 2;
}
